# Artemesis

./: CREDITS.md  README.md  camera.py  stream.py
Dashboard/: Dashboard.py  UserCreation.py  Users.txt  dashboard.py  draftMinds.py  figures.py  index.py  layouts.py  pi_camera.py  picamera.py  pyproject.toml  requirements.txt  snapshot.txt  test_index.py  testing.py
Dashboard/CrackDetectionDir/: CrackDetection.py
Dashboard/assets/: app_utils.py  bootstrap.css  camera.py  distance.py  stream.py  temperature.py  utils.py
Dashboard/assets/data/: distance.csv  temperature.csv
Tinker_board/Temperature/: temperature.py
