[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "Dashboard component as part of GGC's SAUCE 2.0 entry into the 2022 NASA Space Apps Challenge."
authors = ["Samuel Mckinney <sam@samuel.zone>", "Matteo Kitic <mkitic@ggc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ansi2html = "^1.8.0"
asttokens = "^2.2.1"
backcall = "^0.2.0"
brotli = "^1.0.9"
certifi = "^2022.12.7"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
colorama = "^0.4.6"
cycler = "^0.11.0"
dash = "^2.9.2"
dash-bootstrap-components = "^1.4.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-table = "^5.0.0"
debugpy = "^1.6.6"
decorator = "^5.1.1"
entrypoints = "^0.4"
executing = "^1.2.0"
flask = "^2.2.3"
flask-compress = "^1.13"
fonttools = "^4.39.3"
idna = "^3.4"
ipykernel = "^6.22.0"
ipython = "^8.12.0"
itsdangerous = "^2.1.2"
jedi = "^0.18.2"
jinja2 = "^3.1.2"
jupyter-client = "^8.1.0"
jupyter-core = "^5.3.0"
jupyter-dash = "^0.4.2"
kiwisolver = "^1.4.4"
markupsafe = "^2.1.2"
matplotlib = "^3.7.1"
matplotlib-inline = "^0.1.6"
mpmath = "^1.3.0"
nest-asyncio = "^1.5.6"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
packaging = "^23.0"
pandas = "^2.0.0"
parso = "^0.8.3"
pickleshare = "^0.7.5"
pillow = "^9.5.0"
plotly = "^5.14.0"
prompt-toolkit = "^3.0.38"
psutil = "^5.9.4"
pure-eval = "^0.2.2"
pygments = "^2.14.0"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
pyzmq = "^25.0.2"
requests = "^2.28.2"
retrying = "^1.3.4"
scipy = "^1.10.1"
six = "^1.16.0"
stack-data = "^0.6.2"
sympy = "^1.11.1"
tenacity = "^8.2.2"
tornado = "^6.2"
traitlets = "^5.9.0"
urllib3 = "^1.26.15"
wcwidth = "^0.2.6"
werkzeug = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
